--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@googlemaps/js-api-loader": "^1.16.8",
         "@headlessui/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.2",
         "@inertiajs/react": "^2.0.0",
@@ -42,6 +43,7 @@
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.0.6",
         "@tanstack/react-table": "^8.21.2",
+        "@types/google.maps": "^3.58.1",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
