--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/leaflet": "^1.9.16",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
@@ -25,6 +26,7 @@
         "@headlessui/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.2",
         "@inertiajs/react": "^2.0.0",
+        "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -53,12 +55,14 @@
         "date-fns": "^2.30.0",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.475.0",
         "next-themes": "^0.4.4",
         "react": "^19.0.0",
         "react-day-picker": "^9.5.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "react-leaflet": "^5.0.0",
         "recharts": "^2.15.1",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.1",
